Assigned masthead logo an ID and switched out corresponding style. Implemented #logo:focus

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <header aria-label="">
-            <a href="#"></a>
+            <a href="#" id="logo"></a>
         </header>
     
         <main>
