Added masthead h1 and positioned it

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="container">
         <header aria-label="">
             <a href="#" id="logo"></a>
+            <h1>What do you want to do in Greece?</h1>
         </header>
     
         <main>
