--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <header aria-label="">
             <a href="#" id="logo"></a>
             <h1>What do you want to do in Greece?</h1>
+            <form action="#" method="post">
+                <input type="search" aria-label="">
+                <button>Go</button>
+            </form>
         </header>
     
         <main>
