Added aria-label to logo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <header aria-label="">
-            <a href="#" id="logo"></a>
+            <a href="#" id="logo" aria-label="Go greek tours"></a>
             <h1>What do you want to do in Greece?</h1>
             <form action="#" method="post">
                 <input type="search" aria-label="">
