Simplified greekHistory layout by building columns using display: block rather than grid

--- a/index.html
+++ b/index.html
@@ -22,26 +22,30 @@
     
         <main>
             <section class="greekHistory">
-                <div class="subGrid">
+                <div>
                     <a href="#" aria-label="" id="greekHistoryPhoto" class="image"></a>
                     <h2>Greek History</h2>
                     <p>Tour our ancient architecture, from the Acropolis to the Temple of Athena, the beauty of our iconic treasures is unrivaled.</p>
                     <img aria-label="" src="layout2-assets/plus-icon.png"/>
                 </div>
 
-                <div class="subGrid">
+                <div>
                     <a href="#" aria-label="" id="santoriniPhoto" class="image"></a>
                     <h2>Santorini</h2>
                     <p>This classic city located on the beautiful Aegean Sea is home to cave houses, active volcanos and unparalleled beaches.</p>
                     <img aria-label="" src="layout2-assets/plus-icon.png"/>
                 </div>
 
-                <div class="subGrid">
+                <div>
                     <a href="#" aria-label="" id="monasteryPhoto" class="image"></a>
                     <h2>Monastic Splendor</h2>
                     <p>Landscape and dramatic vistas are integral to the Orthodox medieval traditions of the Greek monasteries.</p>
                     <img aria-label="" src="layout2-assets/plus-icon.png"/>
                 </div>
+            </section>
+
+            <section>
+
             </section>
             
         </main>
