Implemented and styled quote

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 </div>
             </section>
 
-            <section>
-
+            <section class="quote">
+                <blockquote>"Greece is one of the few must-see places on earth, you simply have to see if for yourself."<br /><span>-Conde Naste</span></blockquote>
             </section>
             
         </main>
