--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
             <section class="quote">
                 <blockquote>"Greece is one of the few must-see places on earth, you simply have to see if for yourself."<br /><span>-Conde Naste</span></blockquote>
             </section>
+
+            <section class="exploreCafe image" aria-label="">
+                <h2>Explore Cafe Culture</h2>
+            </section>
             
         </main>
     
