--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
                 <h2>Explore Cafe Culture</h2>
             </section>
             
+            <section class="travelSmart">
+                <h2>Travel Smart</h2>
+                <a href="#">Passports and Visas</a>
+                <a href="#">Weather and Water</a>
+                <a href="#">Travel to Greece</a>
+                <a href="#">Travel in Greece</a>
+            </section>
         </main>
     
         <footer>
