Fixed typo in quote

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </section>
 
             <section class="quote">
-                <blockquote>"Greece is one of the few must-see places on earth, you simply have to see if for yourself."<br /><span>-Conde Naste</span></blockquote>
+                <blockquote>"Greece is one of the few must-see places on earth, you simply have to see it for yourself."<br /><span>-Conde Naste</span></blockquote>
             </section>
 
             <section class="exploreCafe image" aria-label="">
