Implemented footer and styled it to match screenshots

--- a/index.html
+++ b/index.html
@@ -62,7 +62,31 @@
         </main>
     
         <footer>
-    
+            <section class="greekToursNav">
+                <h2>Go Greek Tours</h2>
+                <nav>
+                    <ul>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Travel Information</a></li>
+                        <li><a href="#">Maps and Brochures</a></li>
+                        <li><a href="#">General Information</a></li>
+                    </ul>   
+                </nav>
+            </section>
+
+            <section class="mailList">
+                <h2>Stay Up to Date</h2>
+                <p>Join our mailing list and get the latest news and travel inspiration.</p>
+                <form action="#" method="post">
+                    <input type="email" aria-label="" placeholder="Email address">
+                    <input type="submit" value="Join">
+                </form>
+            </section>
+
+            <section class="socialMedia">
+                <a href="#" aria-label="" class="image" id="twitterIcon"></a>
+                <p>&copy; Go Greek Tours</p>
+            </section>
         </footer>
     </div>
 </body>
