Implemented print styling and put .exploreCafe text in an anchor

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </section>
 
             <section class="exploreCafe image" aria-label="">
-                <h2>Explore Cafe Culture</h2>
+                <h2><a href="#">Explore Cafe Culture</a></h2>
             </section>
             
             <section class="travelSmart">
