Added landmark roles

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header aria-label="" class="image">
             <a href="#" id="logo" aria-label="Go greek tours"></a>
             <h1>What do you want to do in Greece?</h1>
-            <form action="#" method="post">
+            <form action="#" method="post" role="search">
                 <input type="search" aria-label="">
                 <button>Go</button>
             </form>
@@ -85,7 +85,7 @@
 
             <section class="socialMedia">
                 <a href="#" aria-label="" class="image" id="twitterIcon"></a>
-                <p>&copy; Go Greek Tours</p>
+                <p role="contentinfo">&copy; Go Greek Tours</p>
             </section>
         </footer>
     </div>
