--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <div class="container">
-        <header aria-label="" class="image">
-            <a href="#" id="logo" aria-label="Go greek tours"></a>
+        <header aria-label="A top view of a peninsula that is surrounded by light blue water and a secluded beach." class="image">
+            <a href="#" id="logo" aria-label="Go Greek Tours."></a>
             <h1>What do you want to do in Greece?</h1>
             <form action="#" method="post" role="search">
-                <input type="search" aria-label="">
+                <input type="search" aria-label="Enter what you would like to do in Greece">
                 <button>Go</button>
             </form>
         </header>
@@ -23,21 +23,21 @@
         <main>
             <section class="greekHistory">
                 <div>
-                    <a href="#" aria-label="" id="greekHistoryPhoto" class="image"></a>
+                    <a href="#" aria-label="Old greek columns supporting a beam." id="greekHistoryPhoto" class="image"></a>
                     <h2>Greek History</h2>
                     <p>Tour our ancient architecture, from the Acropolis to the Temple of Athena, the beauty of our iconic treasures is unrivaled.</p>
                     <img aria-label="" src="layout2-assets/plus-icon.png"/>
                 </div>
 
                 <div>
-                    <a href="#" aria-label="" id="santoriniPhoto" class="image"></a>
+                    <a href="#" aria-label="White Santorini buildings with round, blue roof tops." id="santoriniPhoto" class="image"></a>
                     <h2>Santorini</h2>
                     <p>This classic city located on the beautiful Aegean Sea is home to cave houses, active volcanos and unparalleled beaches.</p>
                     <img aria-label="" src="layout2-assets/plus-icon.png"/>
                 </div>
 
                 <div>
-                    <a href="#" aria-label="" id="monasteryPhoto" class="image"></a>
+                    <a href="#" aria-label="A monastery overlooking a cliff." id="monasteryPhoto" class="image"></a>
                     <h2>Monastic Splendor</h2>
                     <p>Landscape and dramatic vistas are integral to the Orthodox medieval traditions of the Greek monasteries.</p>
                     <img aria-label="" src="layout2-assets/plus-icon.png"/>
@@ -48,7 +48,7 @@
                 <blockquote>"Greece is one of the few must-see places on earth, you simply have to see it for yourself."<br /><span>-Conde Naste</span></blockquote>
             </section>
 
-            <section class="exploreCafe image" aria-label="">
+            <section class="exploreCafe image" aria-label="An outside view of a cafe with turquoise colored walls and light red window frames.">
                 <h2><a href="#">Explore Cafe Culture</a></h2>
             </section>
             
@@ -78,13 +78,13 @@
                 <h2>Stay Up to Date</h2>
                 <p>Join our mailing list and get the latest news and travel inspiration.</p>
                 <form action="#" method="post">
-                    <input type="email" aria-label="" placeholder="Email address">
+                    <input type="email" aria-label="Enter an email address" placeholder="Email address">
                     <input type="submit" value="Join">
                 </form>
             </section>
 
             <section class="socialMedia">
-                <a href="#" aria-label="" class="image" id="twitterIcon"></a>
+                <a href="#" aria-label="Twitter icon" class="image" id="twitterIcon"></a>
                 <p role="contentinfo">&copy; Go Greek Tours</p>
             </section>
         </footer>
