Made plus icon aria-labels more descriptive

--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
                     <a href="#" aria-label="Old greek columns supporting a beam." id="greekHistoryPhoto" class="image"></a>
                     <h2>Greek History</h2>
                     <p>Tour our ancient architecture, from the Acropolis to the Temple of Athena, the beauty of our iconic treasures is unrivaled.</p>
-                    <a href="#" aria-label="A round blue button with a plus in the center"><img alt="plus icon" src="layout2-assets/plus-icon.png"/></a>
+                    <a href="#" aria-label="Read more about greek history."><img alt="plus icon" src="layout2-assets/plus-icon.png"/></a>
                 </div>
 
                 <div>
                     <a href="#" aria-label="White Santorini buildings with round, blue roof tops." id="santoriniPhoto" class="image"></a>
                     <h2>Santorini</h2>
                     <p>This classic city located on the beautiful Aegean Sea is home to cave houses, active volcanos and unparalleled beaches.</p>
-                    <a href="#" aria-label="A round blue button with a plus in the center"><img alt="plus icon"  src="layout2-assets/plus-icon.png"/></a>
+                    <a href="#" aria-label="Read more about Santorini."><img alt="plus icon"  src="layout2-assets/plus-icon.png"/></a>
                 </div>
 
                 <div>
                     <a href="#" aria-label="A monastery overlooking a cliff." id="monasteryPhoto" class="image"></a>
                     <h2>Monastic Splendor</h2>
                     <p>Landscape and dramatic vistas are integral to the Orthodox medieval traditions of the Greek monasteries.</p>
-                    <a href="#" aria-label="A round blue button with a plus in the center"><img alt="plus icon" src="layout2-assets/plus-icon.png"/></a>
+                    <a href="#" aria-label="Read more about monastic splendor."><img alt="plus icon" src="layout2-assets/plus-icon.png"/></a>
                 </div>
             </section>
 
