--- a/index.html
+++ b/index.html
@@ -21,28 +21,28 @@
         </header>
     
         <main>
-            <section class="greekHistory">
-                <div>
+            <div class="tours">
+                <section aria-labelledby="greekHistoryHdr">
                     <a href="#" aria-label="Old greek columns supporting a beam." id="greekHistoryPhoto" class="image"></a>
-                    <h2>Greek History</h2>
+                    <h2 id="greekHistoryHdr">Greek History</h2>
                     <p>Tour our ancient architecture, from the Acropolis to the Temple of Athena, the beauty of our iconic treasures is unrivaled.</p>
                     <a href="#" aria-label="Read more about greek history."><img alt="plus icon" src="layout2-assets/plus-icon.png"/></a>
-                </div>
+                </section>
 
-                <div>
+                <section aria-labeledby="santoriniHdr">
                     <a href="#" aria-label="White Santorini buildings with round, blue roof tops." id="santoriniPhoto" class="image"></a>
-                    <h2>Santorini</h2>
+                    <h2 id="santoriniHdr">Santorini</h2>
                     <p>This classic city located on the beautiful Aegean Sea is home to cave houses, active volcanos and unparalleled beaches.</p>
                     <a href="#" aria-label="Read more about Santorini."><img alt="plus icon"  src="layout2-assets/plus-icon.png"/></a>
-                </div>
+                </section>
 
-                <div>
+                <section aria-labelledby="monasticSplendorHdr">
                     <a href="#" aria-label="A monastery overlooking a cliff." id="monasteryPhoto" class="image"></a>
-                    <h2>Monastic Splendor</h2>
+                    <h2 aria-labelledby="monasticSplendorHdr">Monastic Splendor</h2>
                     <p>Landscape and dramatic vistas are integral to the Orthodox medieval traditions of the Greek monasteries.</p>
                     <a href="#" aria-label="Read more about monastic splendor."><img alt="plus icon" src="layout2-assets/plus-icon.png"/></a>
-                </div>
-            </section>
+                </section>
+            </div>
 
             <section class="quote">
                 <blockquote>"Greece is one of the few must-see places on earth, you simply have to see it for yourself."<br /><span>-Conde Naste</span></blockquote>
