Added aria-labelledby attributes and changed footer markup structure to better reflect content

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
                 <blockquote>"Greece is one of the few must-see places on earth, you simply have to see it for yourself."<br /><span>-Conde Naste</span></blockquote>
             </section>
 
-            <section class="exploreCafe image" aria-label="An outside view of a cafe with turquoise colored walls and light red window frames.">
-                <h2><a href="#">Explore Cafe Culture</a></h2>
+            <section class="exploreCafe image" aria-label="An outside view of a cafe with turquoise colored walls and light red window frames." aria-labelledby="exploreCafeHdr">
+                <h2 id="exploreCafeHdr"><a href="#">Explore Cafe Culture</a></h2>
             </section>
             
-            <section class="travelSmart">
-                <h2>Travel Smart</h2>
+            <section class="travelSmart" aria-labelledby="travelSmartHdr">
+                <h2 id="travelSmartHdr">Travel Smart</h2>
                 <a href="#">Passports and Visas</a>
                 <a href="#">Weather and Water</a>
                 <a href="#">Travel to Greece</a>
@@ -62,8 +62,8 @@
         </main>
     
         <footer>
-            <section class="greekToursNav">
-                <h2>Go Greek Tours</h2>
+            <section class="greekToursNav" aria-labelledby="greekToursHdr">
+                <h2 id="greekToursHdr">Go Greek Tours</h2>
                 <nav>
                     <ul>
                         <li><a href="#">About Us</a></li>
@@ -74,8 +74,8 @@
                 </nav>
             </section>
 
-            <section class="mailList">
-                <h2>Stay Up to Date</h2>
+            <section class="mailList" aria-labelledby="mailListHdr">
+                <h2 id="mailListHdr">Stay Up to Date</h2>
                 <p>Join our mailing list and get the latest news and travel inspiration.</p>
                 <form action="#" method="post">
                     <input type="email" aria-label="Enter an email address" placeholder="Email address">
@@ -83,10 +83,10 @@
                 </form>
             </section>
 
-            <section class="socialMedia">
-                <a href="#" aria-label="Twitter icon" class="image" id="twitterIcon"></a>
+            <aside>
+                <a href="#" aria-label="Go to our twitter" class="image" id="twitterIcon"></a>
                 <p role="contentinfo">&copy; Go Greek Tours</p>
-            </section>
+            </aside>
         </footer>
     </div>
 </body>
