Added name attributes to form elements and self-terminating slashes

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <a href="#" id="logo" aria-label="Go Greek Tours."></a>
             <h1>What do you want to do in Greece?</h1>
             <form action="#" method="post" role="search">
-                <input type="search" aria-label="Enter what you would like to do in Greece">
-                <button>Go</button>
+                <input type="search" aria-label="Enter what you would like to do in Greece" name="search" />
+                <button name="searchButton">Go</button>
             </form>
         </header>
     
@@ -78,8 +78,8 @@
                 <h2 id="mailListHdr">Stay Up to Date</h2>
                 <p>Join our mailing list and get the latest news and travel inspiration.</p>
                 <form action="#" method="post">
-                    <input type="email" aria-label="Enter an email address" placeholder="Email address">
-                    <input type="submit" value="Join">
+                    <input type="email" aria-label="Enter an email address" placeholder="Email address" name="email" />
+                    <input type="submit" value="Join" name="submit" />
                 </form>
             </section>
 
