Added title and fixed aria-labelledby typo

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-	<title></title>
+	<title>Go Greek Tours :: Home</title>
 	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -29,7 +29,7 @@
                     <a href="#" aria-label="Read more about greek history."><img alt="plus icon" src="layout2-assets/plus-icon.png"/></a>
                 </section>
 
-                <section aria-labeledby="santoriniHdr">
+                <section aria-labelledby="santoriniHdr">
                     <a href="#" aria-label="White Santorini buildings with round, blue roof tops." id="santoriniPhoto" class="image"></a>
                     <h2 id="santoriniHdr">Santorini</h2>
                     <p>This classic city located on the beautiful Aegean Sea is home to cave houses, active volcanos and unparalleled beaches.</p>
