--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                 <section aria-labelledby="monasticSplendorHdr">
                     <a href="#" aria-label="A monastery overlooking a cliff." id="monasteryPhoto" class="image"></a>
-                    <h2 aria-labelledby="monasticSplendorHdr">Monastic Splendor</h2>
+                    <h2 id="monasticSplendorHdr">Monastic Splendor</h2>
                     <p>Landscape and dramatic vistas are integral to the Orthodox medieval traditions of the Greek monasteries.</p>
                     <a href="#" aria-label="Read more about monastic splendor."><img alt="plus icon" src="layout2-assets/plus-icon.png"/></a>
                 </section>
