Changed quote markup to aside to better reflect content

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                 </section>
             </div>
 
-            <section class="quote">
+            <aside class="quote">
                 <blockquote>"Greece is one of the few must-see places on earth, you simply have to see it for yourself."<br /><span>-Conde Naste</span></blockquote>
-            </section>
+            </aside>
 
             <section class="exploreCafe image" aria-label="An outside view of a cafe with turquoise colored walls and light red window frames." aria-labelledby="exploreCafeHdr">
                 <h2 id="exploreCafeHdr"><a href="#">Explore Cafe Culture</a></h2>
