Changed header button to input type=submit to better reflect content. Implemented IDs to differentiate between header inputs

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <a href="#" id="logo" aria-label="Go Greek Tours."></a>
             <h1>What do you want to do in Greece?</h1>
             <form action="#" method="post" role="search">
-                <input type="search" aria-label="Enter what you would like to do in Greece" name="search" />
-                <button name="searchButton">Go</button>
+                <input type="search" aria-label="Enter what you would like to do in Greece" name="search" id="searchField"/>
+                <input type="submit" name="searchButton" value="Go" id="searchButton"/>
             </form>
         </header>
     
