Made exploreCafeHdr anchor surround h2. Changed corresponding css

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </aside>
 
             <section class="exploreCafe image" aria-label="An outside view of a cafe with turquoise colored walls and light red window frames." aria-labelledby="exploreCafeHdr">
-                <h2 id="exploreCafeHdr"><a href="#">Explore Cafe Culture</a></h2>
+                <a href="#"><h2 id="exploreCafeHdr">Explore Cafe Culture</h2></a>
             </section>
             
             <section class="travelSmart" aria-labelledby="travelSmartHdr">
