Moved jump anchor inside container, corrected and implemented focus styles

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 <body>
     <div class="container">
+        <a href="#mainContent" id="jump">Jump to main content</a>
+        
         <header aria-label="A top view of a peninsula that is surrounded by light blue water and a secluded beach." class="image">
             <a href="#" id="logo" aria-label="Go Greek Tours."></a>
             <h1>What do you want to do in Greece?</h1>
@@ -20,7 +22,7 @@
             </form>
         </header>
     
-        <main>
+        <main id="mainContent">
             <div class="tours">
                 <section aria-labelledby="greekHistoryHdr">
                     <a href="#" aria-label="Old greek columns supporting a beam." id="greekHistoryPhoto" class="image"></a>
