Simplified footer input styling with ids

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <a href="#mainContent" id="jump">Jump to main content</a>
-        
+
         <header aria-label="A top view of a peninsula that is surrounded by light blue water and a secluded beach." class="image">
             <a href="#" id="logo" aria-label="Go Greek Tours."></a>
             <h1>What do you want to do in Greece?</h1>
@@ -80,8 +80,8 @@
                 <h2 id="mailListHdr">Stay Up to Date</h2>
                 <p>Join our mailing list and get the latest news and travel inspiration.</p>
                 <form action="#" method="post">
-                    <input type="email" aria-label="Enter an email address" placeholder="Email address" name="email" />
-                    <input type="submit" value="Join" name="submit" />
+                    <input type="email" aria-label="Enter an email address" placeholder="Email address" name="email" id="emailField"/>
+                    <input type="submit" value="Join" name="submit" id="emailButton"/>
                 </form>
             </section>
 
