--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Go Greek Tours :: Home</title>
 	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <meta name="description" content="Go Greek Tours is your one and only answer for that vacation in Greece. Contact us today to learn more about our services!" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /> 
     <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@400;700&family=Roboto+Slab:wght@400;700&family=Roboto:wght@400&display=swap" rel="stylesheet" />
